视频页完成
实现视频页的列表,上拉获取更多数据,以及分享.

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -53,9 +53,9 @@
         <view class="title">
           {{item.name}}
         </view>
-        <view class="musicItem" wx:for="{{item.tracks}}" wx:for-item="musicItem" wx:key="id">
+        <view class="musicItem" wx:for="{{item.tracks}}" wx:for-item="musicItem" wx:for-index="musicIndex" wx:key="id">
           <image src="{{musicItem.al.picUrl}}"></image>
-          <text class="count">1</text>
+          <text class="count">{{musicIndex+1}}</text>
           <text class="musicName">{{musicItem.name}}</text>
         </view>
       </swiper-item>
